# KiPlay

./: .gitignore  CMakeLists.txt  Database.cpp  Database.h  DatabaseActions.cpp  DatabaseActions.h  Finder.cpp  Finder.h  MusicFile.cpp  MusicFile.h  finder.cpp  finder.h  main.cpp  songObject.cpp  songObject.h
UI/: mainTUI.cpp  mainTUI.h
